style.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    font-family: 'Lato', sans-serif;
    overflow-x: hidden;
    -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased;
}
p {
    line-height: 1.3;
    margin: 10px 0;
}
header {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    color: white;
    background: #111;
    overflow-x: hidden;
    text-align: center;
    width: 100%;
    padding: 30px 40px;
}
h1 {
    font-size: 60px;
    height: 75px;
    overflow-x: hidden;
    white-space: nowrap;
}
.header_content {
}
section {
    min-height: 60vh;
    display: flex;
    flex-direction: row;
}
section .sidebar {
    width: 80px;
    padding: 30px 10px 0 20px;
    background: #222;
    color: white;
}
section h3 {
    width: 100%;
    white-space: nowrap;
    writing-mode: vertical-rl;
    text-orientation: mixed;
    font-size: 50px;
    margin: 0;
}
h4 {
    font-size: 30px;
    margin-top: -6px;
}
section .column {
    flex: 1;
    background-attachment: fixed !important;
    background-size: cover !important;
    color: white;
    padding: 30px;
}
section:nth-of-type(1) .column.paris {
    background:
        linear-gradient(
          rgba(0, 0, 0, 0.7),
          rgba(0, 0, 0, 0.3)
        ),
        url(images/paris/1.jpg);
}
section:nth-of-type(1) .column.dallas {
    background:
        linear-gradient(
          rgba(0, 0, 0, 0.7),
          rgba(0, 0, 0, 0.3)
        ),
        url(images/dallas/1.jpg);
}
section:nth-of-type(2) .column.paris {
    background:
        linear-gradient(
          rgba(0, 0, 0, 0.7),
          rgba(0, 0, 0, 0.3)
        ),
        url(images/paris/2.jpg);
}
section:nth-of-type(2) .column.dallas {
    background:
        linear-gradient(
          rgba(0, 0, 0, 0.7),
          rgba(0, 0, 0, 0.3)
        ),
        url(images/dallas/2.jpg);
}
section:nth-of-type(3) .column.paris {
    background:
        linear-gradient(
          rgba(0, 0, 0, 0.7),
          rgba(0, 0, 0, 0.3)
        ),
        url(images/paris/3.jpg);
}
section:nth-of-type(3) .column.dallas {
    background:
        linear-gradient(
          rgba(0, 0, 0, 0.7),
          rgba(0, 0, 0, 0.3)
        ),
        url(images/dallas/3.jpg);
}
section:nth-of-type(4) .column.paris {
    background:
        linear-gradient(
          rgba(0, 0, 0, 0.7),
          rgba(0, 0, 0, 0.3)
        ),
        url(images/paris/4.jpg);
}
section:nth-of-type(4) .column.dallas {
    background:
        linear-gradient(
          rgba(0, 0, 0, 0.7),
          rgba(0, 0, 0, 0.3)
        ),
        url(images/dallas/4.jpg);
}
section:nth-of-type(5) .column.paris {
    background:
        linear-gradient(
          rgba(0, 0, 0, 0.7),
          rgba(0, 0, 0, 0.3)
        ),
        url(images/paris/5.jpg);
}
section:nth-of-type(5) .column.dallas {
    background:
        linear-gradient(
          rgba(0, 0, 0, 0.7),
          rgba(0, 0, 0, 0.3)
        ),
        url(images/dallas/5.jpg);
}
article {
    padding: 20px;
}
footer {

}

